# PaperMind

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BENCHMARK_ANALYSIS.md  CODE_FIXES_REPORT.md  DAILY_REPORT_FEATURE.md  Dockerfile  Dockerfile.backend  IMPROVEMENTS.md  PaperMind.md  README.md  TODO_NEXT_VERSION.md  alembic.ini  bench_multiturn.json  bench_results.json  bench_results_optimized.json  docker-compose.yml  package.json  pyproject.toml  roadmap.md  第二轮失败.txt
.github/workflows/: pr-review-gate.yml
apps/api/: deps.py  main.py  mcp.py
apps/desktop/: server.py
apps/worker/: main.py
docs/: IEEE_API_REGISTRATION_GUIDE.md  IEEE_API_TEST_RESULT.md  IEEE_CHANNEL_INTEGRATION_PLAN.md  IEEE_COMPLETE_PROGRESS.md  IEEE_COMPLETE_SUMMARY.md  IEEE_FINAL_DELIVERY.md  IEEE_INTEGRATION_TEST_PLAN.md  IEEE_MVP_DEPLOYMENT.md  IEEE_QUOTA_SYSTEM.md  IEEE_ROLLOUT_PLAN.md  PaperMind.md
docs/deployment/: DOCKER_DEPLOYMENT.md  DOCKER_FIXES.md  WIKI_DEPLOYMENT.md
docs/plans/: 2026-03-19-cs-category-feed-design.md  2026-03-23-multi-source-design.md  2026-05-08-agent-m0.md  2026-05-08-demo-site.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
infra/: backup.sh
scripts/: auto_deploy.sh  backup_db.sh  batch_process_unread.py  bench_agent_chat.py  bench_multiturn.py  build-desktop.sh  check_alembic.py  check_db.py  cleanup_unread.py  copy_env_from_deploy.sh  dev_setup.py  docker_deploy.sh  e2e-full.mjs  e2e-test.mjs  init_db.py  init_tags_table.py  local_bootstrap.py  migrate_sqlite_to_pg.py  pg_backup.sh  quick_check.sh  redeep_stuck_skimmed.py  reembed_all.py  reskim_bad.py  seed_demo.py  test_ingest.py  verify_ieee_setup.py  worker_healthcheck.py
src-tauri/: Cargo.toml  tauri.conf.json
tests/: conftest.py  test_agent_conversation.py  test_demo_mode.py  test_ieee_client.py  test_ieee_mock.py  test_import_smoke.py  test_langgraph_agent.py  test_langgraph_chat_model.py  test_repositories.py
(+157 files in other folders)
